class PluginVo{
  final String scannerProjectPath;
  final String outPutPath;
  final String hitModuleTag;
  final String hitPackageTag;

  PluginVo(this.scannerProjectPath, this.outPutPath, this.hitModuleTag,
      this.hitPackageTag);
}